i added another lorem text

--- a/cartoontiger.html
+++ b/cartoontiger.html
@@ -125,7 +125,7 @@
         <div class="trainer-bio text-right">
           <h3>Joanna Gill</h3>
           <h4>Endurance</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error harum possimus laboriosam maiores voluptates. Architecto tempore enim quasi, dolore voluptates asperiores vitae! Maxime dicta, non facilis repellat dolores laborum qui?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error harum possimus laboriosam maiores voluptates. Architecto tempore enim quasi, dolore voluptates asperiores vitae! Maxime dicta, non facilis repellat dolores laborum qui? <br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas, corrupti sequi velit odio est a itaque repellat error nulla culpa quia vel pariatur totam eum exercitationem nostrum mollitia accusantium?</p>
         </div>
         <img src="./assets/images/trainers-2.jpg" alt="Dont work" />
       </article>
