another lorem added

--- a/cartoontiger.html
+++ b/cartoontiger.html
@@ -117,7 +117,8 @@
         <div class="trainer-bio text-left">
           <h3>Arron Stephens</h3>
           <h4>Speed / Strength</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, facere quo dolores illo esse optio laborum officia hic quam commodi nulla dicta neque culpa doloremque repudiandae veritatis fugit molestias!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, facere quo dolores illo esse optio laborum officia hic quam commodi nulla dicta neque culpa doloremque repudiandae veritatis fugit molestias! <br>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque est numquam nemo molestias porro iste doloribus aliquid libero beatae cupiditate ducimus vel, quasi, in nam excepturi obcaecati velit possimus quae.</p>
         </div>
       </article>
 
