added the right touch to the website

--- a/cartoontiger.html
+++ b/cartoontiger.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="tiger.css">
+  <link rel="stylesheet" href="cartoontiger.css">
   <link rel="stylesheet" href="fatcat.html">
   <title>Tiger Belly</title>
   <style>
@@ -117,8 +117,7 @@
         <div class="trainer-bio text-left">
           <h3>Arron Stephens</h3>
           <h4>Speed / Strength</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, facere quo dolores illo esse optio laborum officia hic quam commodi nulla dicta neque culpa doloremque repudiandae veritatis fugit molestias! <br>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque est numquam nemo molestias porro iste doloribus aliquid libero beatae cupiditate ducimus vel, quasi, in nam excepturi obcaecati velit possimus quae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, facere quo dolores illo esse optio laborum officia hic quam commodi nulla dicta neque culpa doloremque repudiandae veritatis fugit molestias!</p>
         </div>
       </article>
 
@@ -126,7 +125,7 @@
         <div class="trainer-bio text-right">
           <h3>Joanna Gill</h3>
           <h4>Endurance</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error harum possimus laboriosam maiores voluptates. Architecto tempore enim quasi, dolore voluptates asperiores vitae! Maxime dicta, non facilis repellat dolores laborum qui? <br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas, corrupti sequi velit odio est a itaque repellat error nulla culpa quia vel pariatur totam eum exercitationem nostrum mollitia accusantium?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error harum possimus laboriosam maiores voluptates. Architecto tempore enim quasi, dolore voluptates asperiores vitae! Maxime dicta, non facilis repellat dolores laborum qui?</p>
         </div>
         <img src="./assets/images/trainers-2.jpg" alt="Dont work" />
       </article>
